--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -8,7 +8,7 @@
  *
  * Each colors have exact same color scale system with 3 levels of solid
  * colors with different brightness, and 1 soft color.
- * 
+ *
  * - `XXX-1`: The most solid color used mainly for colored text. It must
  *   satisfy the contrast ratio against when used on top of `XXX-soft`.
  *
@@ -136,4 +136,41 @@
 .DocSearch {
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
+.DocSearch-Button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    width: 32px;
+    height: 32px;
+    border-radius: 4px;
+    background: transparent;
+    transition: border-color 0.25s;
+}
+@media (min-width: 768px) {
+    .DocSearch-Button {
+        justify-content: flex-start;
+        border: 1px solid transparent;
+        border-radius: 8px;
+        padding: 0 10px 0 12px;
+        width: 100%;
+        height: 40px;
+        background-color: var(--vp-c-bg-alt);
+    }
+}
+@media (max-width: 768px) {
+    .DocSearch-Button-Keys {
+        display: none;
+    }
+    .VPNavBarHamburger {
+        height: 32px !important;
+        width: 32px !important;
+        border-radius: 4px;
+    }
+}
+.DocSearch-Button:hover {
+    background-color: #f5f5f6;
+}
+
 
